Added the ability to enable or disable server-side includes for a specific file extension for virtual servers with a website.
If PHP 5.3 or higher is installed via a separate package, Virtualmin will now detect it and allow it to be selected on a per-domain or per-directory basis. This is useful for systems whose default PHP package is version 5.2 or older.
Added a template section to configure the mail client auto-configuration XML, for example if some domains use custom mail servers.
The key size is now configurable when setting up DKIM or generating a new key.
Plugin modules available to domain owners can now be configured at the template level, in the Administrator's Webmin modules section.
When the contact email address for a domain is changed, default mail aliases like postmaster will be updated to the new address.
When DNS records are modified in a virtual server, all records are synchronized into any alias domains.
Changed the default email folder names to Junk, Trash, Drafts, Sent and Virus.
Added an option to the Spam and Virus Scanning page to control what happens when email is sent to a mailbox that is over quota (bouncing or queueing for later).
---- Changes since 3.99 ----
Updated the Django script installer to version 1.5, SugarCRM to 6.5.11, Mediawiki to 1.20.3 and 1.19.4, PiWik to 1.11, Drupal to 7.21, and ZenPhoto to version 1.4.4.3.
If Webmin's BIND module is configured to use the SPF type for Sender Permitted From records, Virtualmin will create both SPF and TXT records for domains.